--- a/02_LEARN_VUE3/demo01/package.json
+++ b/02_LEARN_VUE3/demo01/package.json
@@ -21,8 +21,10 @@
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "axios": "^0.27.2",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "mockjs": "^1.1.0",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0"
   }
