--- a/02_LEARN_VUE3/musicapp/package.json
+++ b/02_LEARN_VUE3/musicapp/package.json
@@ -21,9 +21,12 @@
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "axios": "^0.27.2",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "less": "^4.0.0",
-    "less-loader": "^8.0.0"
+    "less-loader": "^8.0.0",
+    "swiper": "^8.3.2",
+    "vue-awesome-swiper": "^5.0.1"
   }
 }
