--- a/02_LEARN_VUE3/musicapp/package.json
+++ b/02_LEARN_VUE3/musicapp/package.json
@@ -26,6 +26,7 @@
     "eslint-plugin-vue": "^8.0.3",
     "less": "^4.0.0",
     "less-loader": "^8.0.0",
+    "lodash": "^4.17.21",
     "swiper": "^8.3.2",
     "vue-awesome-swiper": "^5.0.1"
   }
