--- a/TS/2-chapter/装饰器/package.json
+++ b/TS/2-chapter/装饰器/package.json
@@ -6,10 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "startparcel": "parcel ./index.html",
-    "dev:build": "tsc -w", 
-    "dev:start":"nodemon --watch dist/teaching js --exec  node ./dist/teaching/1ClassDecorator.js",
-    "start":  "concurrently npm:dev:*",
-    "tsc":"tsc src/8-方法装饰器-应用.ts  --target ES5 -w --experimentalDecorators"
+    "dev:build": "tsc -w",
+    "dev:start": "nodemon --watch dist/teaching js --exec  node ./dist/teaching/1ClassDecorator.js",
+    "start": "concurrently npm:dev:*",
+    "tsc": "tsc src/8-方法装饰器-应用.ts  --target ES5 -w --experimentalDecorators"
   },
   "author": "",
   "license": "ISC",
@@ -17,6 +17,7 @@
     "concurrently": "^7.6.0",
     "nodemon": "^2.0.20",
     "parcel-bundler": "^1.12.5",
+    "reflect-metadata": "^0.1.13",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   }
