--- a/TS/2-chapter/仿Nest/package.json
+++ b/TS/2-chapter/仿Nest/package.json
@@ -10,11 +10,14 @@
     "dev:start": "nodemon --watch dist/teaching js --exec  node ./dist/teaching/1ClassDecorator.js",
     "start": "concurrently npm:dev:*",
     "tsnode": "ts-node  src/controller/UserController.ts",
+    "app": "nodemon --watch src/ -e ts --exec ts-node ./src2/expressapp.ts",
+    "ctrl": "ts-node src2/controller/HomeController.ts",
     "tsc": "tsc src/8-方法装饰器-应用.ts  --target ES5 -w --experimentalDecorators"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.15",
     "concurrently": "^7.6.0",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
