删除不要的

--- a/TS/3-chapter/ts-axios/package.json
+++ b/TS/3-chapter/ts-axios/package.json
@@ -9,7 +9,7 @@
   "files": [
     "dist"
   ],
-  "author": "jingchaoyang <jingchaoyang@autohome.com.cn>",
+  "author": "jingchaoyang",
   "repository": {
     "type": "git",
     "url": ""
